--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,7 +1,6 @@
 {
   "name": "food_portal",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.ts",
@@ -17,5 +16,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13"
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
