--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "food_portal",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "concurrently \"cd ./Backend && nodemon index.ts\" \"cd ./frontend && npm run start\""
-
   },
   "repository": {
     "type": "git",
@@ -20,5 +18,8 @@
   "homepage": "https://github.com/SarangTandel5112/foodportal#readme",
   "dependencies": {
     "concurrently": "^7.2.2"
-  }
+  },
+  "devDependencies": {},
+  "keywords": [],
+  "description": ""
 }
